# constants

./: .gitignore  pyproject.toml
src/myconstants/: __init__.py  policies.py
