[project]
name = "apsniper0673_constants"
version = "0.1.7"
description = "My constants for APSniper0673"
authors = [
  { name = "apsniper0673" }
]
requires-python = ">=3.8"
dependencies = [
    # "pandas",
    # "numpy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]